# vudeljump

./: .gitignore  Cargo.toml  README.md  build.rs  build_android.bat
.cargo/: config.toml
android/: settings.gradle.kts  vudeljump.jks
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/example/vudeljump/: MainActivity.java
android/app/src/main/res/layout/: activity_main.xml
android/app/src/main/res/values/: strings.xml  themes.xml
android/app/src/main/res/values-night/: themes.xml
android/gradle/: libs.versions.toml
android/gradle/wrapper/: gradle-wrapper.properties
font/: std.fef  std1.fef
shaders/: frag.spv  shader.frag  shader.vert  vert.spv
src/: lib.rs  main.rs
src/game/: app.rs  item.rs  mod.rs  platform.rs  player.rs  world.rs
src/game/states/: main_state.rs  mod.rs
src/graphic/: buffer.rs  image.rs  instance.rs  main_pipeline.rs  mod.rs  shader_modul.rs  swapchain.rs  uniform_buffer_object.rs  vertex.rs  vulkan_render.rs
